feature send daily report